corrected view on mobiles

--- a/styles.css
+++ b/styles.css
@@ -404,36 +404,3 @@ form input[type="submit"]:hover {
     font-size: 16px;
   }
 }
-
-/* Mobile-specific optimizations */
-@media (max-width: 750px) {
-  body {
-    overflow-x: hidden; /* Prevent horizontal overflow */
-    font-size: 16px;
-  }
-
-  .imgcontainer {
-    height: 300px;
-  }
-
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap; 
-  }
-
-  .item {
-    width: calc(91% - 20px);
-    margin: 10px auto;
-    font-size: 16px;
-  }
-
-  .article-container {
-    font-size: 16px;
-    width: 90%-8px;
-    padding: 15px;
-    height: calc(100vh - 60px);
-    overflow-x: hidden;
-  }
-}
